# TestActivator

./: DeluxeShop.ps1  DeluxeShop2  DeluxeShop2.ps1  README.md
nogui/: Cargo.toml
nogui/src/: main.rs
src/: main.rs
